final changes and wtv
everything has had to be modified a tiny bit to get it to all work